<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logoCDO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_cdo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUsuario_cambioClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/usuario_cambioClave"
            android:singleLine="true"
            android:textSize="14sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAntiguaClave_cambioClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/antigua_clave_cambioClave"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textSize="14sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNuevaClave_cambioClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/nueva_clave_cambioClave"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textSize="14sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNuevaClave2_cambioClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/nuevaclave2_cambioClave"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textSize="14sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelar_cambioclave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/liquidar_orden_cancelar" />

        <Button
            android:id="@+id/btnCambiarClave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/btnCambiarClave" />
    </LinearLayout>
</LinearLayout>